fix: 加固互动投影重建与批量回源